--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#F1F1F1">
 </head>
 <body>
+    <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
         <div type="Download" class="Download">
             <a class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">Buy</a>
