--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
-        <div type="Download" class="Download">
+        <div type="download" class="download">
             <a class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">Buy</a>
             <span class="button__icon">
                 <ion-icon name="cloud-download-outline"></ion-icon>
