and done for now

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
         <div type="download" class="download">
-            <a class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">Buy</a>
+            <a class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">Download</a>
             <span class="button__icon">
                 <ion-icon name="cloud-download-outline"></ion-icon>
             </span>
