--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/images/soda.jpg">
     <meta property="twitter:title" content="Soda Autoclicker">
-    <meta property="twitter:description" content="The Best Minecraft Java Edition 1.8.9 Auto Clcker">
+    <meta property="twitter:description" content="The Best Minecraft Java Edition 1.8.9 Auto Clicker">
     <meta property="twitter:image" content="">
     <meta name="theme-color" content="#F1F1F1">
 </head>
