--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
     <title>Soda Autoclicker</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/images/soda.jpg">
-    <meta property="twitter:title" content="Soda Autoclicker">  
-    <meta property="twitter:description" content="The Best Minecraft Java Edition 1.8.9 Auto Clicker">
-    <meta property="twitter:image" content="">
-    <meta name="theme-color" content="#F1F1F1">
 </head>
 <body>
     <img src="assets/images/banner.png" id="banner">
     <div class="buttons">
         <div type="download" class="download">
-            <a class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">Download</a>
+            <a id="download-btn" class="button__text" href="https://github.com/Dream23322/Soda-Autoclicker/releases/latest" target="_blank">
+                Download
+            </a>
             <span class="button__icon">
                 <ion-icon name="cloud-download-outline"></ion-icon>
             </span>
@@ -27,7 +25,25 @@
             </span>
         </div>
     </div>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+    <script>
+        async function setLatestTag() {
+            try {
+                const response = await fetch("https://api.github.com/repos/Dream23322/Soda-Autoclicker/releases/latest");
+                const data = await response.json();
+                const latestTag = data.tag_name;
+
+                const downloadBtn = document.getElementById("download-btn");
+                downloadBtn.textContent = `Download (${latestTag})`;
+            } catch (err) {
+                console.error("Error fetching latest tag:", err);
+            }
+        }
+
+        setLatestTag();
+    </script>
 </body>
-</html> 
+</html>
